# docs/swagger.json
@@ -24,7 +24,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/service.AggregatedPulseDTO"
+                                "$ref": "#/definitions/dto.AggregatedPulse"
                             }
                         }
                     }
@@ -93,6 +93,23 @@
         }
     },
     "definitions": {
+        "dto.AggregatedPulse": {
+            "type": "object",
+            "properties": {
+                "product_sku": {
+                    "type": "string"
+                },
+                "tenant": {
+                    "type": "string"
+                },
+                "total_used": {
+                    "type": "number"
+                },
+                "use_unit": {
+                    "type": "string"
+                }
+            }
+        },
         "model.Pulse": {
             "type": "object",
             "required": [
@@ -108,31 +125,18 @@
                 "tenant": {
                     "type": "string"
                 },
-                "timestamp": {
-                    "type": "string"
-                },
                 "use_unit": {
-                    "type": "string"
+                    "type": "string",
+                    "enum": [
+                        "GB",
+                        "MB",
+                        "KB",
+                        "TB",
+                        "PB"
+                    ]
                 },
                 "used_amount": {
                     "type": "number"
-                }
-            }
-        },
-        "service.AggregatedPulseDTO": {
-            "type": "object",
-            "properties": {
-                "product_sku": {
-                    "type": "string"
-                },
-                "tenant": {
-                    "type": "string"
-                },
-                "total_used": {
-                    "type": "number"
-                },
-                "use_unit": {
-                    "type": "string"
                 }
             }
         }
